--- a/app/src/main/res/layout/view_schedule_card.xml
+++ b/app/src/main/res/layout/view_schedule_card.xml
@@ -6,16 +6,13 @@
                                     android:layout_height="wrap_content"
                                     android:minHeight="@dimen/schedule_card_height"
                                     android:layout_margin="@dimen/spacing_small"
-
                                     card_view:cardBackgroundColor="@android:color/white"
                                     card_view:cardCornerRadius="@dimen/spacing_small">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:padding="@dimen/spacing_small"
+        android:padding="@dimen/spacing_medium"
         android:orientation="vertical">
 
         <TextView
@@ -47,6 +44,13 @@
             android:textSize="@dimen/text_size_small"
             android:textColor="@color/grey_400"
             />
-
     </LinearLayout>
+
+    <android.support.v7.widget.SwitchCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|center"
+        android:padding="@dimen/spacing_medium"
+        />
+
 </android.support.v7.widget.CardView>
