--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -11,6 +11,7 @@
 
     <item
         android:id="@+id/menu_action_save"
+        android:icon="@drawable/ic_add_white_24dp"
         android:title="@string/action_save"
         app:showAsAction="ifRoom"/>
 </menu>
