Add intent.action for NotifyReceiver. Add intent.data for DailyCheckReceiver. Change HOUR to HOUR_OF_DAY in DailyCheckReceiver's alarm. Fix an issue with adapter updating. Use RecyclerView.Adapter's notifyRemove, notifyAdd, and notifyChange for new data. Hide keyboard when prompting Calendar or Clock.

--- a/app/src/main/res/layout/widget_schedule_layout.xml
+++ b/app/src/main/res/layout/widget_schedule_layout.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="36dp"
         android:src="@color/light_blue_700"
-        android:contentDescription="@string/empty"
-        />
+        android:contentDescription="@string/empty"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
