--- a/app/src/main/res/layout/view_schedule_card.xml
+++ b/app/src/main/res/layout/view_schedule_card.xml
@@ -15,12 +15,25 @@
         android:padding="@dimen/spacing_medium"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/schedule_card_title"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_large"
-            android:textColor="@color/light_blue_700"/>
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/schedule_card_label"
+                android:layout_marginTop="@dimen/spacing_half_medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_label_grey600_24dp"
+                android:contentDescription="@string/label"
+                />
+            <TextView
+                android:id="@+id/schedule_card_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/text_size_large"
+                android:textColor="@color/light_blue_700"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/schedule_card_location"
