--- a/app/src/main/res/layout/view_schedule_card.xml
+++ b/app/src/main/res/layout/view_schedule_card.xml
@@ -60,6 +60,7 @@
     </LinearLayout>
 
     <android.support.v7.widget.SwitchCompat
+        android:id="@+id/schedule_card_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|center"
