--- a/app/src/main/res/layout/widget_schedule_layout.xml
+++ b/app/src/main/res/layout/widget_schedule_layout.xml
@@ -12,6 +12,7 @@
         android:contentDescription="@string/empty"/>
 
     <TextView
+        android:id="@+id/widget_schedule_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_medium"
