--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -155,61 +155,68 @@
             android:layout_marginLeft="56dp"
             android:weightSum="7"
             >
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_sun"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_sunday"
+                android:textOn="@string/short_sunday"
+                android:textOff="@string/short_sunday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_m"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_monday"
+                android:textOn="@string/short_monday"
+                android:textOff="@string/short_monday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_t"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_tuesday"
+                android:textOn="@string/short_tuesday"
+                android:textOff="@string/short_tuesday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_w"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_wednesday"
+                android:textOn="@string/short_wednesday"
+                android:textOff="@string/short_wednesday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_th"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_thursday"
+                android:textOn="@string/short_thursday"
+                android:textOff="@string/short_thursday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_f"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_friday"
+                android:textOn="@string/short_friday"
+                android:textOff="@string/short_friday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
-            <org.jakelcode.schedule.ui.CheckableButton
+            <ToggleButton
                 android:id="@+id/edit_days_sat"
                 android:layout_width="@dimen/button_width_small"
                 android:layout_height="wrap_content"
-                android:text="@string/short_saturday"
+                android:textOn="@string/short_saturday"
+                android:textOff="@string/short_saturday"
                 android:textSize="@dimen/text_size_small"
-                android:background="@drawable/edit_day_button"
+                android:checked="true"
                 android:layout_weight="1"/>
         </LinearLayout>
         </org.jakelcode.schedule.ui.FoldLayout>
